--- a/scss/utils/_dark.scss
+++ b/scss/utils/_dark.scss
@@ -1,4 +1,5 @@
 .dark-mode {
+    background: var(--gray-dark-default);
     .header-cont {
         background: var(--gray-dark-default);
     }
